--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,8 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+body {
+    background-color: black;
+}
 /* 
 
     You can write your own styles here...
